--- a/web/index.html
+++ b/web/index.html
@@ -55,5 +55,23 @@
       });
     });
   </script>
+  <script type="module">
+
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyC8shK6qRmHUweLagNjJMtvgCVjLtr4O5Y",
+      authDomain: "my-tiffin-app-8266e.firebaseapp.com",
+      projectId: "my-tiffin-app-8266e",
+      storageBucket: "my-tiffin-app-8266e.appspot.com",
+      messagingSenderId: "300061634717",
+      appId: "1:300061634717:web:2d6a481afc586c8195e474"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
