--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -54,24 +54,52 @@
         }
       });
     });
-  </script>
+<!--  </script>-->
+<!--  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>-->
+<!--  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>-->
+<!--  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>-->
+<!--  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js"></script>-->
+
+<!--  <script src="main.dart.js" type="application/javascript"></script>-->
+
+<!--  <script>-->
+<!--    const firebaseConfig = {-->
+<!--      apiKey: "AIzaSyC8shK6qRmHUweLagNjJMtvgCVjLtr4O5Y",-->
+<!--      authDomain: "my-tiffin-app-8266e.firebaseapp.com",-->
+<!--      projectId: "my-tiffin-app-8266e",-->
+<!--      storageBucket: "my-tiffin-app-8266e.appspot.com",-->
+<!--      messagingSenderId: "300061634717",-->
+<!--      appId: "1:300061634717:web:2d6a481afc586c8195e474"-->
+<!--    };-->
+
+<!--    // Initialize Firebase-->
+<!--    firebase.initializeApp(firebaseConfig);-->
+<!--    firebase.analytics();-->
+<!--</script>-->
   <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyC8shK6qRmHUweLagNjJMtvgCVjLtr4O5Y",
+    authDomain: "my-tiffin-app-8266e.firebaseapp.com",
+    projectId: "my-tiffin-app-8266e",
+    storageBucket: "my-tiffin-app-8266e.appspot.com",
+    messagingSenderId: "300061634717",
+    appId: "1:300061634717:web:2d6a481afc586c8195e474",
+    measurementId: "G-D128GXJ77Z"
+  };
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyC8shK6qRmHUweLagNjJMtvgCVjLtr4O5Y",
-      authDomain: "my-tiffin-app-8266e.firebaseapp.com",
-      projectId: "my-tiffin-app-8266e",
-      storageBucket: "my-tiffin-app-8266e.appspot.com",
-      messagingSenderId: "300061634717",
-      appId: "1:300061634717:web:2d6a481afc586c8195e474"
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
 </script>
 </body>
 </html>
